hphp/hack/test/ifc/check/exception_subtyping.php.exp
File "exception_subtyping.php", line 27, characters 5-20:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
File "exception_subtyping.php", line 8, characters 16-23:
The data source with policy `PRIVATE`
File "exception_subtyping.php", line 10, characters 16-22:
The data sink with policy `PUBLIC`
File "exception_subtyping.php", line 23, characters 9-23:
Another program point contributing to the illegal flow
File "exception_subtyping.php", line 18, characters 3-18:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
File "exception_subtyping.php", line 8, characters 16-23:
The data source with policy `PRIVATE`
File "exception_subtyping.php", line 10, characters 16-22:
The data sink with policy `PUBLIC`
File "exception_subtyping.php", line 15, characters 7-22:
Another program point contributing to the illegal flow
